--- a/register.html
+++ b/register.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="register.css" />
+    <title>Registeration</title>
     <style>
       body {
         margin: 0;
@@ -40,7 +41,7 @@
         gap: 15px;
       }
 
-      button {
+      /* button {
         padding: 20px 40px;
         font-size: 18px;
         background-color: brown;
@@ -57,7 +58,7 @@
       }
       button:hover {
         background-color: #654321; /* Darker brown on hover */
-      }
+      } */
     </style>
   </head>
   <body>
@@ -72,9 +73,47 @@
         </div>
       </nav>
     </header>
-    <button onclick="window.location.href='beverage.html'">
-      Start your order here
-    </button>
+
+    <form style="border: 1px solid #ccc">
+      <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr />
+
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" id="email" required />
+
+        <label for="username"><b>Username</b></label>
+        <input
+          type="text"
+          placeholder="Enter Username"
+          id="username"
+          required
+        />
+
+        <label for="password"><b>Password</b></label>
+        <input
+          type="password"
+          placeholder="Enter Password"
+          id="password"
+          required
+        />
+
+        <p>
+          By creating an account you agree to our
+          <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
+        </p>
+
+        <div class="clearfix">
+          <button type="button" class="cancelbtn">Cancel</button>
+          <button type="button" onclick="signup()" class="signupbtn">
+            Sign Up
+          </button>
+        </div>
+      </div>
+    </form>
     <script src="configuration.js"></script>
+
+    <script src="register.js"></script>
   </body>
 </html>
